ahi va tomando forma

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>Marvel</title>
   </head>
   <body>
-    <header class="contenedor">>
-        <div class="logotipo">
-          <img src="img/logomarvel.png">
-        </div>
-
+    <header>
+      <div class="icon-container">
+          <img src="img/logomarvel.png" class="icon">
+      </div>  
         <nav>
-          <a href="#">Historia</a>
+          <a href="#">History</a>
           <a href="#">Peliculas</a>
           <a href="#">¿Como se convierte en Hulk?</a>
         </nav>
       
     </header>
     <main>
+      <div class="main-section">
         <div class="presentacion de personaje">
             <div class="contenedor">
                   <h2>The increidible Hulk</h2>
@@ -31,7 +31,8 @@
                   </p>
             </div>      
         </div>
-
+        <input type="button" value="Abrir" onclick="window.open('Aqui la direccion que quieres que se abra')" />
+      </div>
     </main>
     <script src="js/main.js"></script>
   </body>
